fixed director carousel icon spacing

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -6,23 +6,6 @@
     font-weight: 800;
 }
 
-/* @font-face {
-    font-family: "Commuters Sans 900";
-    src: url("https://use.typekit.net/af/54ddfb/00000000000000007735c467/30/l?subset_id=2&fvd=n9&v=3") format("woff2"), url("https://use.typekit.net/af/54ddfb/00000000000000007735c467/30/d?subset_id=2&fvd=n9&v=3") format("woff"), url("https://use.typekit.net/af/54ddfb/00000000000000007735c467/30/a?subset_id=2&fvd=n9&v=3") format("opentype");
-    font-display: auto;
-    font-style: normal;
-    font-weight: 900;
-} */
-
-
-/* @font-face {
-    font-family: "Commuters Sans 400";
-    src: url("https://use.typekit.net/af/ca0a63/00000000000000007735c456/30/l?subset_id=2&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/ca0a63/00000000000000007735c456/30/d?subset_id=2&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/ca0a63/00000000000000007735c456/30/a?subset_id=2&fvd=n4&v=3") format("opentype");
-    font-display: auto;
-    font-style: normal;
-    font-weight: 400;
-} */
-
 @font-face {
     font-family: "Commuters Sans 700";
     src: url("https://use.typekit.net/af/857ae9/00000000000000007735c460/30/l?subset_id=2&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/857ae9/00000000000000007735c460/30/d?subset_id=2&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/857ae9/00000000000000007735c460/30/a?subset_id=2&fvd=n7&v=3") format("opentype");
@@ -39,15 +22,6 @@
     src: url(https://fonts.gstatic.com/s/spacemono/v6/i7dNIFZifjKcF5UAWdDRYERMR3K_MQacbw.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
-/* @font-face {
-    font-family: 'Outfit 500';
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/outfit/v2/QGYyz_MVcBeNP4NjuGObqx1XmO1I4QK1O4a0FQItq6fNIg.woff) format('woff');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-} */
 
 @font-face {
     font-family: 'Outfit 400';
