--- a/frontend/src/component/LandingPage/Carousels/DirectorsCarousel/style.css
+++ b/frontend/src/component/LandingPage/Carousels/DirectorsCarousel/style.css
@@ -20,12 +20,20 @@
      width: 4.2vw;
  }
 
- .h-35 {
-     height: 35%;
+ .h-40 {
+     height: 40%;
  }
 
-.h-33 {
+.h-30 {
     height: 30%;
+}
+
+.w-80 {
+    width: 80%;
+}
+
+.h-33 {
+    height: 33.33333333%;
 }
 
 .title-style {
